// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Writing/package json files should enable CdsUi5Plugin when workspace is enabled 1`] = `
Object {
  "": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\",
    \\"app/test-cap-package-no-sapux\\"
  ],
  \\"scripts\\": {
    \\"watch-test-cap-package-no-sapux\\": \\"cds watch --open test-cap-package-no-sapux/webapp/index.html?sap-ui-xx-viewCache=false\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test-cap-package-no-min-cds-version/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  },
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"^6.8.2\\"
  },
  \\"workspaces\\": [
    \\"app/*\\"
  ],
  \\"devDependencies\\": {
    \\"cds-plugin-ui5\\": \\"^0.6.13\\"
  },
  \\"sapux\\": [
    \\"app/test-cap-package-sapux\\"
  ]
}
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
}
`;

exports[`Writing/package json files should log warning if no minimum cds version is being satisfied 1`] = `
Object {
  "": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\",
    \\"app/test-cap-package-no-sapux\\"
  ],
  \\"scripts\\": {
    \\"watch-test-cap-package-no-sapux\\": \\"cds watch --open test-cap-package-no-sapux/webapp/index.html?sap-ui-xx-viewCache=false\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../../test-cap-package-sapux/ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
}
`;

exports[`Writing/package json files should remove int-test script and keep other scripts 1`] = `
Object {
  "": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  },
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"^6.8.2\\"
  },
  \\"workspaces\\": [
    \\"app/*\\"
  ],
  \\"devDependencies\\": {
    \\"cds-plugin-ui5\\": \\"^0.6.13\\"
  },
  \\"sapux\\": [
    \\"app/test-cap-package-sapux\\"
  ]
}
",
    "state": "modified",
  },
  "../../../../app/package.json": Object {
    "contents": "{}
",
    "state": "modified",
  },
  "../../../unit/cap-writer/test-inputs/test-cap-package-no-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test-cap-package-no-min-cds-version/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\",
    \\"app/test-cap-package-no-sapux\\"
  ],
  \\"scripts\\": {
    \\"watch-test-cap-package-no-sapux\\": \\"cds watch --open test-cap-package-no-sapux/webapp/index.html?sap-ui-xx-viewCache=false\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../../test-cap-package-sapux/ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
}
`;

exports[`Writing/package json files should remove sapux property from package json and start scripts 1`] = `
Object {
  "../../app/package.json": Object {
    "contents": "{}
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-min-cds-version/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  },
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"^6.8.2\\"
  },
  \\"workspaces\\": [
    \\"app/*\\"
  ],
  \\"devDependencies\\": {
    \\"cds-plugin-ui5\\": \\"^0.6.13\\"
  },
  \\"sapux\\": [
    \\"app/test-cap-package-sapux\\"
  ]
}
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-sapux/webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-sapux/webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-no-sapux/webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\",
    \\"app/test-cap-package-no-sapux\\"
  ],
  \\"scripts\\": {
    \\"watch-test-cap-package-no-sapux\\": \\"cds watch --open test-cap-package-no-sapux/webapp/index.html?sap-ui-xx-viewCache=false\\"
  }
}
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-sapux/tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-sapux/ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../../test/test-output/test-cap-package-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
}
`;

exports[`Writing/package json files should update package for cap projects with sap ux disabled 1`] = `
Object {
  "": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test-cap-package-no-min-cds-version/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\"
  ]
}
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../../test-cap-package-sapux/ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../../test-cap-package-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
}
`;

exports[`Writing/package json files should update package for cap projects with sap ux enabled 1`] = `
Object {
  "": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"6.8.2\\"
  },
  \\"sapux\\": [
    \\"app/1\\",
    \\"app/2\\",
    \\"app/3\\",
    \\"app/test-cap-package-no-sapux\\"
  ],
  \\"scripts\\": {
    \\"watch-test-cap-package-no-sapux\\": \\"cds watch --open test-cap-package-no-sapux/webapp/index.html?sap-ui-xx-viewCache=false\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-java-pom-xml/pom.xml": Object {
    "contents": "<project xmlns=\\"http://maven.apache.org/POM/4.0.0\\"
	xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\"
	xsi:schemaLocation=\\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\\">
	<modelVersion>4.0.0</modelVersion>
	<build>
		<plugins>
			<!-- JAVA VERSION -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>\${jdk.version}</release>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<!-- SUREFIRE PLUGIN -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<failIfNoTests>true</failIfNoTests>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
			</plugin>

			<!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- PROJECT STRUCTURE CHECKS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>Project Structure Checks</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.5</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>\${jdk.version}</version>
								</requireJavaVersion>
								<reactorModuleConvergence />
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
",
    "state": "modified",
  },
  "../../test-cap-package-no-min-cds-version/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"dependencies\\": {
    \\"@sap/cds\\": \\"4.4.2\\"
  },
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/package.json": Object {
    "contents": "{
  \\"name\\": \\"test_cap\\",
  \\"version\\": \\"0\\",
  \\"description\\": \\"Test file\\",
  \\"scripts\\": {
    \\"test-script\\": \\"Run some scripts here\\",
    \\"int-test\\": \\"test command\\",
    \\"start\\": \\"start command\\"
  }
}
",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp-with-services/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/index.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotation\\": {
                  \\"ODataAnnotation\\": true
                },
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
  "../../test-cap-package-no-sapux/webapp/services.cds": Object {
    "contents": "",
    "state": "modified",
  },
  "../tsconfig.json": Object {
    "contents": "{
    \\"compilerOptions\\": {
        \\"typeRoots\\": [\\"./node_modules/@types\\"]
    }
    
}",
    "state": "modified",
  },
  "../ui5.yaml": Object {
    "contents": "specVersion: \\"2.5\\"
metadata:
  name: sap.fe.demo.incidents
type: application
",
    "state": "modified",
  },
  "../webapp/manifest.json": Object {
    "contents": "{
    \\"sap.app\\": {
        \\"dataSources\\": {
            \\"mainService\\": {
              \\"uri\\": \\"/incident/\\",
              \\"type\\": \\"OData\\",
              \\"settings\\": {
                \\"annotations\\": [\\"ODataAnnotation\\"],
                \\"odataVersion\\": \\"4.0\\"
              }
            }
          }
    }
}",
    "state": "modified",
  },
}
`;
